# Hackathon-Two-SDD-

./: .gitignore  CLAUDE.md  README.md
phase-01-console/: .coverage  CLAUDE.md  COMPLETION_REPORT.md  CONSTITUTION.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  test_cli.py  test_runner.py  verify_implementation.py
phase-01-console/src/: __init__.py  main.py
phase-01-console/src/application/: __init__.py  exceptions.py
phase-01-console/src/domain/: __init__.py  task_repository.py
phase-01-console/src/infrastructure/: __init__.py
phase-01-console/src/interface/: __init__.py  cli.py  command_router.py  console_renderer.py  input_handler.py
phase-01-console/tests/: __init__.py
phase-01-console/tests/fixtures/: task_fixtures.py
phase-01-console/tests/integration/: test_task_workflows.py
phase-01-console/tests/unit/: test_task.py  test_task_repository.py  test_task_service.py
phase-02-web/backend/: .coverage  .env.example  .flake8  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  app.py  app_demo.py  pyproject.toml  requirements.txt  requirements_demo.txt
phase-02-web/backend/alembic/: env.py
phase-02-web/backend/alembic/versions/: da30fb6ea3da_create_users_and_tasks_tables.py
phase-02-web/backend/src/: config.py
phase-02-web/backend/src/api/: dependencies.py  deps.py  main.py
phase-02-web/backend/src/api/models/: __init__.py  error_response.py  task_request.py  task_response.py
phase-02-web/backend/src/api/routes/: auth.py  (+2 more)
phase-02-web/backend/src/application/: auth_service.py  task_service.py
phase-02-web/backend/src/domain/: task.py
phase-02-web/backend/src/infrastructure/: database.py  in_memory_task_repository.py  models.py
phase-02-web/backend/tests/: API_TESTS_README.md  TEST_SUITE_SUMMARY.md  conftest.py
phase-02-web/backend/tests/api/: conftest.py  test_error_handling.py  test_pydantic_models.py  test_tasks_api.py
phase-02-web/backend/tests/integration/: __init__.py  test_full_stack.py
phase-03-ai-chat/backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  app_demo.py  pyproject.toml  requirements.txt  requirements_demo.txt
phase-03-ai-chat/backend/alembic/versions/: 001_add_user_preferences_and_password_reset_tables.py
phase-03-ai-chat/backend/src/: config.py  main.py
phase-03-ai-chat/backend/src/agent/: client_tools.py  instructions.py  server.py  tools.py
phase-03-ai-chat/backend/src/api/: deps.py
phase-03-ai-chat/backend/src/auth/: jwt.py
phase-03-ai-chat/backend/src/database/: session.py
phase-03-ai-chat/backend/src/models/: __init__.py  chat_message.py  password_reset_token.py  task.py  uploaded_file.py  user.py  user_preferences.py
phase-03-ai-chat/backend/src/services/: auth_service.py  password_reset_service.py  task_service.py  user_preferences_service.py
phase-03-ai-chat/backend/src/utils/: email.py
phase-03-ai-chat/backend/tests/: conftest.py
(+289 files in other folders)
